# scale-data

./: README.md  pyproject.toml  setup.py
scale_data/: __init__.py  scale_data.py
